# gem_trajectory_control

./: README.md  package.xml  setup.cfg  setup.py
gem_trajectory_control/: trajectory_to_control_node.py
