<?xml version="1.0"?>
<package format="3">
  <name>gem_trajectory_control</name>
  <version>0.0.0</version>
  <description>Trajectory tracking controller for GEM e4.</description>
  <maintainer email="ruizeg2@illinois.edu">ruize</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>